--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 # About
-    Colloquial exprisiones
+    Colloquial expresions made easy. This projet is an android application that helps to learn and remember colloquialisms in other languages.
+    It currently has a database of english-spanish/spanish-english idioms, but everyone can add new sentences and or languages through the app.
 
 # Requirements
 
@@ -10,14 +11,16 @@
 
 # Installation
 
-    - Add Android Studio:
+    - Install Android Studio:
 
     https://developer.android.com/sdk/installing/index.html
 
-    - Add gradle:
+    - Install gradle:
 
     http://gradle.org/docs/current/userguide/installation.html
+
 # Usage
+    Compile with Android Studio and graddle
 
 
-    Feel free to contribute, and contact me for any issues.
+Feel free to contribute, and contact me for any issues.
