--- a/README
+++ b/README
@@ -19,7 +19,7 @@
     http://gradle.org/docs/current/userguide/installation.html
 
 # Usage
-    Compile with Android Studio and graddle
+    Compile with Android Studio and gradle
 
 
 Feel free to contribute, and contact me for any issues.
